# wagtail-seotoolkit

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE-MIT  LICENSE-PROPRIETARY  MANIFEST.in  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  setup.py
.github/workflows/: pypi-publish.yml  workflow.yml
requirements/: base.txt  development.txt  testing.txt
src/wagtail_seotoolkit/: __init__.py  apps.py  middleware.py  models.py  signals.py  views.py  wagtail_hooks.py
src/wagtail_seotoolkit/core/: __init__.py  models.py  views.py
src/wagtail_seotoolkit/core/ui/: __init__.py  get_side_panels.py  side_panels.py
src/wagtail_seotoolkit/migrations/: 0001_initial.py  0002_seoauditissue_page.py  0003_alter_seoauditissue_issue_severity.py  0004_alter_seoauditrun_status.py  0005_seoauditissue_requires_dev_fix.py  0006_add_pagespeed_issue_types.py  0007_update_pagespeed_issue_type_names.py  0008_pluginemailverification.py  0009_remove_is_verified_field.py  0010_seometadatatemplate.py  0010_seometadescription_seotitle.py  0011_subscriptionlicense.py  0012_remove_email_from_subscription_license.py  0013_add_placeholder_unprocessed_issue_type.py  0014_seoauditreport.py  0015_jsonld_schema_models.py  0016_refactor_jsonld_to_one_template_per_pagetype.py  0017_add_recipe_schema_type.py  0018_simplify_site_wide_schemas.py  0019_redirectauditresult.py  0020_brokenlinkauditresult.py  0021_alter_jsonldschematemplate_schemas_and_more.py  0022_draftseoaudit_check_details.py  0023_alter_draftseoauditissue_issue_type_and_more.py  0024_pagetargetkeyword.py
src/wagtail_seotoolkit/pro/: __init__.py  __license__.py  forms.py  middleware.py  models.py  redirect_forms.py  redirect_views.py  views.py
src/wagtail_seotoolkit/templatetags/: __init__.py  wagtail_seotoolkit_tags.py
src/wagtail_seotoolkit/ui/: get_side_panels.py  side_panels.py
src/wagtail_seotoolkit/utils/: pagespeed_api.py  placeholder_utils.py  seo_audit.py  seo_validators.py  subscription_helpers.py
testproject/: .env.example
testproject/bakerydemo/settings/: base.py  dev.py
testproject/requirements/: base.txt
tests/: __init__.py
(+95 files in other folders)
